testAlbumRepository 수정